tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__command-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"$echo \\\"Hello, {name}!\\\"$\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Command(
                    (),
                    [
                        Text(
                            "echo \"Hello, ",
                        ),
                        Expression(
                            (),
                            VariableGet(
                                Variable(
                                    "name",
                                ),
                            ),
                            (),
                        ),
                        Text(
                            "!\"",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
