tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__command-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"$command --arg1 -v$\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Command(
                    (),
                    [
                        Text(
                            "command ",
                        ),
                        CommandOption(
                            (),
                            "arg1",
                        ),
                        Text(
                            " ",
                        ),
                        CommandOption(
                            (),
                            "v",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
