tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__command.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(r#\"$echo \\\"Hello, world!\\\"$\"#).unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Command(
                    (),
                    [
                        Text(
                            "echo ",
                        ),
                        Escape(
                            (),
                            "\"",
                        ),
                        Text(
                            "Hello, world!",
                        ),
                        Escape(
                            (),
                            "\"",
                        ),
                    ],
                    (),
                ),
            ),
        ),
    ],
)
