tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__comment-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 // This is a comment without a newline\")"
---
Ok(
    Statement(
        [
            Statement(
                Expression(
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
