tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__comment.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\n        // This is a comment\n        1 + 2\n    \")"
---
Ok(
    Statement(
        [
            Statement(
                Expression(
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
