tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__expr_precedence-11.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true as Bool as Text as Num * 2 / foo()\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Divide(
                    Multiply(
                        Cast(
                            Cast(
                                Cast(
                                    Boolean(
                                        True,
                                    ),
                                    (),
                                    "Bool",
                                ),
                                (),
                                "Text",
                            ),
                            (),
                            "Num",
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    FunctionInvocation(
                        Variable(
                            "foo",
                        ),
                        (),
                        [],
                        (),
                    ),
                ),
            ),
        ),
    ],
)
